--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ header .btn:hover {
 
 #about p {
     font-size: 1.2rem;
-    max-width: 700px;
+    max-width: 600px;
     margin: 0 auto;
     line-height: 1.8;
     padding: 10px;
@@ -185,7 +185,7 @@ header .btn:hover {
 
 #skills {
     text-align: center;
-    padding: 50px;
+    padding: 100px;
     background: #0d1117;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -772,5 +772,80 @@ footer p {
     }
     100% {
         opacity: 1;
+    }
+}
+
+.carousel {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-inner {
+    display: flex;
+    transition: transform 0.5s ease;
+}
+
+.carousel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+}
+
+.carousel-controls {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+}
+
+.carousel-control {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.tech-carousel {
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+    width: 100%;
+    padding-left: 5em;
+    padding-right: 5em;;
+}
+
+.tech-carousel-inner {
+    display: flex;
+    gap: 35px; 
+    animation: scroll 15s linear infinite;
+    width: max-content;
+}
+
+.tech-carousel-inner::after {
+    content: "";
+    display: block;
+}
+
+.tech-carousel-inner img {
+    height: 70px;
+    width: auto;
+    display: inline-block;
+    object-fit: contain;
+    transition: transform 0.3s ease;
+}
+
+.tech-carousel-inner img:hover {
+    transform: scale(1.1);
+}
+
+@keyframes scroll {
+    from {
+        transform: translateX(0%);
+    }
+    to {
+        transform: translateX(-50%);
     }
 }
