--- a/styles.css
+++ b/styles.css
@@ -817,6 +817,37 @@ footer p {
     padding-right: 5em;;
 }
 
+.tech-carousel img {
+    position: relative;
+    cursor: pointer;
+}
+
+
+.tech-carousel img:hover::after {
+    content: attr(data-tooltip);
+    position: absolute;
+    background-color: black;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    white-space: nowrap;
+    bottom: 120%;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 1;
+    visibility: visible;
+}
+
+.tech-carousel img::after {
+    content: "";
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out;
+}
+
+
 .tech-carousel-inner {
     display: flex;
     gap: 35px; 
