--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     background-image: linear-gradient(45deg, #ff007f, #7a00ff, #00ff9f);
     background-size: 300% 300%;
     animation: rgbShift 5s ease infinite;
+    cursor: url('Mouse.ico'),pointer;
 }
 
 nav {
@@ -29,6 +30,7 @@ nav {
 .profile-buttons {
     display: flex;
     gap: 15px;
+    cursor: url('Mouse.ico'),pointer;
 }
 
 .profile-buttons .btn img {
@@ -118,6 +120,7 @@ header .btn {
     text-decoration: none;
     border-radius: 5px;
     cursor: pointer;
+    cursor: url('Mouse.ico'),pointer;
     transition: all 0.3s ease;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
     animation: glow 1.5s ease-in-out infinite alternate;
@@ -468,6 +471,7 @@ button {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    cursor: url('Mouse.ico'),pointer;
     transition: background 0.3s, transform 0.3s ease;
     box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
     font-family:'Poppins', sans-serif;
@@ -557,6 +561,7 @@ footer p {
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     cursor: pointer;
+    cursor: url('Mouse.ico'),pointer;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -612,6 +617,7 @@ footer p {
     padding: 10px 20px;
     border-radius: 20px;
     cursor: pointer;
+    cursor: url('Mouse.ico'),pointer;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease, visibility 0.3s ease;
