--- a/styles.css
+++ b/styles.css
@@ -38,11 +38,14 @@ nav {
     height: 32px;
     transition: transform 0.3s ease-in-out, filter 0.3s ease-in-out;
     filter: brightness(0.8);
+    cursor: url('Mouse.ico'),pointer;
 }
 
 .profile-buttons .btn img:hover {
     transform: scale(1.2);
     filter: brightness(1);
+    cursor: url('Mouse.ico'),pointer;
+    
 }
 
 .profile-buttons .btn {
@@ -876,6 +879,7 @@ footer p {
 
 .tech-carousel-inner img:hover {
     transform: scale(1.1);
+    cursor: url('Mouse.ico'),pointer;
 }
 
 @keyframes scroll {
