--- a/styles.css
+++ b/styles.css
@@ -823,7 +823,7 @@ footer p {
     position: relative;
     width: 100%;
     padding-left: 5em;
-    padding-right: 5em;;
+    padding-right: 5em;
 }
 
 .tech-carousel img {
@@ -860,7 +860,7 @@ footer p {
 .tech-carousel-inner {
     display: flex;
     gap: 35px; 
-    animation: scroll 90s linear infinite;
+    animation: scroll 100s linear infinite;
     width: max-content;
 }
 
